# mosze-semester-project-foobar_reloaded

./: CMakeLists.txt  LICENSE  README.md  clear_build_dir.sh  doxygen_cfg  story.xml  story.xsd  test_story.xml  test_story_v2.xml
.github/workflows/: cmake.yml
Planning/: Class_Architecture.vpd  GameLoop_ActivityDiagram.plantuml  class_architecture.plantuml  state_machine.plantuml
documentation/: main.tex
documentation/html/: annotated.html  classAcceptMission-members.html  classAcceptMission.html  classAction-members.html  classAction.html  classEntity-members.html  classEntity.html  classInteract-members.html  classInteract.html  classKey-members.html  classKey.html  classMission-members.html  classMission.html  classMove-members.html  classMove.html  classNPC-members.html  classNPC.html  classObject-members.html  classObject.html  classOpenInventory-members.html  classOpenInventory.html  classPickUp-members.html  classPickUp.html  classPlayer-members.html  classPlayer.html  classRoom-members.html  classRoom.html  classSearch-members.html  classSearch.html  classSessionManager-members.html  classSessionManager.html  classWorld-members.html  classWorld.html  classes.html  classtinyxml2_1_1DynArray-members.html  classtinyxml2_1_1DynArray.html  classtinyxml2_1_1MemPool-members.html  classtinyxml2_1_1MemPool.html  classtinyxml2_1_1MemPoolT-members.html  classtinyxml2_1_1MemPoolT.html  (+96 more)
documentation/latex/: annotated.tex  classAcceptMission.eps  classAcceptMission.tex  classAction.eps  classAction.tex  classEntity.eps  classEntity.tex  classInteract.eps  classInteract.tex  classKey.eps  classKey.tex  classMission.tex  classMove.eps  classMove.tex  classNPC.eps  classNPC.tex  classObject.eps  (+51 more)
src/: Config.h.in  engine.cpp  engine.hpp  interface.cpp  interface.hpp  main.cpp  sessionmanager.cpp  sessionmanager.hpp
tests/: test_interface.cpp  test_room.cpp  test_sessionmanager.cpp  test_unit.cpp  test_world.cpp
(+55 files in other folders)
